--- a/practice 4/WebContent/File.html
+++ b/practice 4/WebContent/File.html
@@ -5,7 +5,7 @@
 <title>username</title>
 </head>
 <body>
-<div class="container">
+<div class="container" style="background: grey;">
 	<form action="S1" method="post">
 		First Name: <input type="text" name="first_name" placeholder="first Name">
 		Last Name: <input type="text" name="last_name" placeholder="Last Name">
